--- a/teste/estilos.css
+++ b/teste/estilos.css
@@ -86,7 +86,8 @@ span {
 input[type="date"] {
   border: none;
   font-size: 16px;
-  flex: 1;
+  width: 120px;
+  
 }
 input[type="text"] {
   border: none;
