--- a/teste/estilos.css
+++ b/teste/estilos.css
@@ -8,6 +8,7 @@
 body {
   /* Evita repetição */
   min-width: 500px;
+  height: 100%;
   color: #fff;
 }
 
@@ -22,14 +23,14 @@ header {
 
 .menu_container {
   display: flex;
-  min-width: 55%;
+  min-width: 60%;
   max-width: 80%;
  
   align-items: center;
   margin-bottom: 20px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
-.div_sair{
+.sair{
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -65,6 +66,12 @@ header {
 
 nav a {
   margin-left: 20px;
+  text-decoration: none;
+  color: #002f6c;
+  font-weight: 600;
+}
+
+a {
   text-decoration: none;
   color: #002f6c;
   font-weight: 600;
