--- a/teste/style/form_relatorio.css
+++ b/teste/style/form_relatorio.css
@@ -7,8 +7,6 @@
 
 body {
   /* Evita repetição */
-  min-width: 500px;
-  height: 100%;
   color: #fff;
 }
 
@@ -87,16 +85,21 @@ nav a:hover {
 
 main {
   display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .formulario {
   width: 100%;
   max-width: 500px;
   display: flex;
+  justify-content: center;
+  
   flex-direction: column;
-  gap: 12px;
+  gap: 6px;
 }
 
 .campo {
@@ -161,7 +164,7 @@ select {
 .botoes {
   display: flex;
   justify-content: space-around;
-  margin-top: 10px;
+  margin-top: 2px;
 }
 
 .btn-amarelo {
