--- a/teste/style/relatorio.css
+++ b/teste/style/relatorio.css
@@ -13,6 +13,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  width: 90%;
   align-items: center;
   padding: 6px;
 }
@@ -40,12 +41,10 @@ header {
 }
 
 nav {
-  background-color: white;
   display: flex;
   justify-content: center;
   gap: 30px;
   padding: 10px 0;
-  border-bottom: 2px solid #d9e2f3;
   font-weight: bold;
 }
 
@@ -77,7 +76,7 @@ nav a:hover::after {
 
 
 main {
-  padding: 30px 20px;
+  padding: 5px 30px;
   text-align: center;
 }
 
@@ -147,6 +146,7 @@ thead th {
   border-bottom: 1px solid #ddd;
 }
 
+
 tbody tr:hover {
   background-color: #f3f3f3;
 }
@@ -156,14 +156,8 @@ td {
 }
 
 footer {
-  margin-top: 40px;
-  background-color: white;
-  border-top: 2px solid #d9e2f3;
-  padding: 20px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 15px;
 }
 
 footer img {
