--- a/Tarefa/app/src/main/res/layout/activity_main.xml
+++ b/Tarefa/app/src/main/res/layout/activity_main.xml
@@ -8,39 +8,51 @@
 
 
 
-    <LinearLayout
-        android:id="@+id/buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/ll_buttons"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="8dp">-->
 
 
-        <Button
-            android:id="@+id/home"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Home" />
+<!--        <Button-->
+<!--            android:id="@+id/button_home"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Home" />-->
 
-        <Button
-            android:id="@+id/cadatro"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Criar" />
+<!--        <Button-->
+<!--            android:id="@+id/button_form"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Criar" />-->
 
-        <Button
-            android:id="@+id/lista"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Lista" />
-    </LinearLayout>
+<!--        <Button-->
+<!--            android:id="@+id/button_busca"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Lista" />-->
+<!--    </LinearLayout>-->
 
     <FrameLayout
+        android:id="@+id/frame_fragments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/home"/>
+        android:layout_above="@+id/bottom_navigation"
+        />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_menu"
+        app:itemTextColor="@android:color/white"
+        app:itemIconTint="@android:color/white"/>
 
 </RelativeLayout>
